client/src/components/Home/AboutUs/Event/Event.css
.union .union-img {
  position: absolute;
  height: 210vh;
  left: 50%;
  transform: translateX(-50%);
  z-index: -10;
  pointer-events: none;
}

@media (max-width: 1024px) {
  .union .union-img {
    height: 250vh;
  }
}

@media (max-width: 1024px) and (max-height: 768px) {
  .union .union-img {
    height: 225vh !important;
  }
}

@media (max-width: 1024px) and (max-height: 1366px) {
  .union .union-img {
    height: 230vh;
  }
}

@media (max-width: 768px) and (max-height: 1024px) {
  .union .union-img {
    height: 230vh !important;
  }
}

@media (max-width: 800px) and (max-height: 1280px) {
  .union .union-img {
    height: 240vh;
  }
}

@media screen and (max-width: 575px) {
  .union .union-img {
    opacity: 0;
    pointer-events: none;
    height: 0;
    width: 0;
    display: none;
  }
}

.planet-img {
  animation: myOrbit 4s linear infinite;
  pointer-events: none;
  width: 30vw;
  margin-top: 150px;
  margin-left: 15vw;
  margin-right: 64px;
  float: left;
}

.planet-img-home {
  width: 30vw;
  margin-top: 150px;
  margin-left: 15vw;
  margin-right: 64px;
  float: left;
}

.event-section {
  display: inline-block;
  min-height: 384px;
  width: calc(100% - 45vw - 64px);
}

.event-section-home {
  margin-bottom: 64px;
  width: calc(100% - 45vw - 64px);
}
.event-section .event-content .event-list {
  color: white;
  font-size: 3vh;
  margin-left: 15px;
}

@media (max-width: 425px) {
  .event-section .event-title {
    color: #1eabd6;
    font-size: 4vh;
  }

  .event-section .event-content .title {
    color: white;
    font-size: 2.9vh;
  }

  .event-section .event-content .event-list {
    color: white;
    font-size: 2.5vh;
    margin-left: 5px;
  }

  .event-section {
    margin: 0 10vw;
    width: 80vw;
  }

  .event-section-home {
    margin: 0 0;
    width: 80vw;
  }
  .event-list {
    margin-left: 64px !important;
  }

  .planet-img {
    width: 64vw;
    position: absolute;
    margin-top: 32vh;
    left: calc(-32vw - 64px);
  }
}

@media (max-width: 414px) {
  .event-section {
    margin-bottom: 64px;
  }

  .event-section-home {
    margin-bottom: 32px;
    min-height: 416px !important;
  }
}

@media (max-width: 240px) {
  .planet-img-home {
    width: 64vw;
    position: absolute;
    margin-top: 32vh;
    left: calc(-32vw - 48px);
  }

  .event-section-home .event-list {
    margin-left: 32px !important;
  }

  .planet {
    margin-left: 40px;
  }

  .planet .planet-img {
    margin-top: 40px;
  }

  .event-section {
    min-height: 256px;
    margin-bottom: 16px;
  }
}

.event-section .event-title {
  color: #1eabd6;
  font-size: 4vh;
}

.event-section .event-content .title {
  color: white;
  font-size: 3vh;
  margin: 15px 0;
}

.event-section .event-content .event-loading {
  display: flex;
  width: 100%;
  flex-direction: column;
}

.event-section .event-item .item-title {
  text-decoration: none;
  font-family: "Raleway";
  color: #1eabd6;
  font-weight: bold;
  font-size: 3vh;
  transition: color 0.5s;
}

.event-section .event-item .item-title:hover {
  color: #ee2a7b;
}

.event-section .event-item .item-description {
  font-size: 2.3vh;
}

@keyframes myOrbit {
  from {
    transform: rotate(0deg) translateX(3.5px) rotate(0deg);
  }
  to {
    transform: rotate(360deg) translateX(3.5px) rotate(-360deg);
  }
}

